--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Hubot adapter for Zulip",
   "main": "adapter.coffee",
   "dependencies": {
-    "zulip": "~0.1.0"
+    "zulip": "TheLevelUp/zulip-node#update-request-package"
   },
   "devDependencies": {
     "coffee-script": "~1.6.3"
@@ -12,8 +12,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": ["zulip", "hubot"],
-  "repository":"https://github.com/zulip/hubot-zulip",
+  "keywords": [
+    "zulip",
+    "hubot"
+  ],
+  "repository": "https://github.com/zulip/hubot-zulip",
   "author": "Zulip, Inc.",
   "license": "MIT"
 }
